manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: shop-service
  name: shop-service
  namespace: microservice
spec:
  selector:
    app: microservice-demo
    name: shopService
  ports:
  - protocol: TCP
    port: 7500
    targetPort: http
