manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: microservices.info
    http:
      paths:
      - path: /inventory-service
        backend:
          serviceName: inventory-service
          servicePort: 6500
      - path: /shop-service
        backend:
          serviceName: shop-service
          servicePort: 7500
